Fix HTML encoding issues in second.html

--- a/second.html
+++ b/second.html
@@ -160,7 +160,7 @@
         <span id="l4">Baahon mein bhar le mujhe 💖</span>
 
         <span id="l5" class="final-line">
-            This is how you make me feel, mere puchu ke papa (Ayush jiiii) 💙
+            This is how you make me feel, mere puchu💙
         </span>
 
         <span id="l6" class="promise">Tere liye jhoomu deewana ban ke tere liye</span>
@@ -255,3 +255,4 @@
 
 </body>
 </html>
+
